/*
Copyright IBM Corp. All Rights Reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

option go_package = "github.com/hyperledger/fabric/protos/token";

package token;

// ================ Existing Fabric Transaction structure ===============
//
//In Summary, Fabric supports the following transaction structure:
//
//  Envelope
//  |\_ Signature                                    (signature on the common.Payload message
//  |                                                 including the transaction by the creator
//  |                                                 specified in the Payload.header)
//   \_ Payload
//      |\_ Header (1)                               (the header of the proposal that requested this
//      |                                             action; containing channel header, and
//      |                                             signature header)
//       \_ Data (1)                                 (serialised Transaction message)
//           \_ Transaction
//                \_ TransactionAction (1...n)
//                    |\_ Header (1)                 (the header of the proposal that
//                    |                               requested this action)
//                     \_ ChaincodeActionPayload (1)
//
//
//
//
//  =============== Changes to Existing Fabric Transaction structure ===============
//  For envelopes that carry FabToken transaction we still maintain the same structure
//  such that the orderers functionality is not disturbed:
//
//  Envelope
//  |\_ Signature                                    (signature on the Payload message including
//  |                                                 the transaction by the creator

//  |                                                 specified in the Payload.header)
//   \_ Payload
//      |\_ Header (1)                               (the header of the proposal that requested
//      |                                             this action; containing
//      |                                             channel header, and signature header)
//       \_ Data (1)                                 (serialised Transaction message)
//            \_ TokenTransaction (1)
//                  \_ action (1)                    (a oneof for the different types of transactions)



// TokenTransaction governs the structure of Payload.data, when
// the transaction's envelope header indicates a transaction of type
// "Token"
message TokenTransaction {
    // TokenAction carries the content of this transaction.
    oneof action {
        TokenAction token_action = 1;
    }
}

// TokenAction specifies the structure of the action that a token undertakes
message TokenAction {
    // Data carries the action to be executed
    oneof data {

        // An issue action
        Issue issue = 1;

        // A transfer action
        Transfer transfer = 2;

        // A redeem action
        Transfer redeem = 3;
    }
}

// TokenOwner holds the identity of a token owner
message TokenOwner {
    enum Type {
        MSP_IDENTIFIER = 0;
        // more types to come ....
        // for example
        // CHAINCODE_ID = 1;
        // MSP_OWNER_IDENTIFIER = 2;
    }

    // Type is the type of the identity of the token owner
    Type type = 1;

    // Raw is the serialization of the identity
    bytes raw = 2;
}

// Issue specifies an issue of one or more tokens
message Issue {

    // Outputs are the newly issued tokens
    repeated Token outputs = 1;
}

// Transfer specifies a transfer of one or more tokens
message Transfer {

    // Inputs specify the identifiers in the ledger of the tokens to be transferred
    repeated TokenId inputs = 1;

    // Outputs are the new tokens resulting from the transfer
    repeated Token outputs = 2;
}

// Token is the result of issue and transfer transactions
message Token {

    // Owner is the token owner
    TokenOwner owner = 1;

    // Type is the type of the token
    string type = 2;

    // Quantity is the number of units of Type carried in the token.
    // It is encoded as a string containing a number in base 16. The string has prefix ``0x''.
    string quantity = 3;
}

// A TokenId identifies a token as a function of the identifier of the transaction (issue, transfer)
// that created it and its index in that transaction
message TokenId {

    // TxId is the transaction ID of the transaction that created the token
    string tx_id = 1;

    // Index is the index of the token in the transaction that created it
    uint32 index = 2;
}
